--- a/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
@@ -105,11 +105,17 @@
             <i class="fa fa-copy m--font-success" style="cursor: pointer" title="Editar Factura Masiva" (click)="fileInputMasiva.click()" *ngIf="articulo.factura_url && articulo.consolidado_factura "></i>
         </td>
         <td>
-           
-            <i class="fa fa-save m--font-success" title="Actualizar" *ngIf="articulo.facturaExcel" style="cursor: pointer;"
-               (click)="subirFactura(articulo)">
-
-            </i>
+            <div class="row">
+                <div class="col-3" *ngIf="articulo.facturaExcel">
+                <i class="fa fa-save m--font-success" title="Actualizar"  style="cursor: pointer;"
+                (click)="subirFactura(articulo)">
+                </i>
+            </div>
+             <div class="col-3" *ngIf="articulo.notas && articulo.notas.ver_usuario">
+                 <i *ngIf="articulo.notas" class="fa fa-comments-o m--font-success" title="Notas" style="cursor: pointer" 
+                    (click)="onNotas(notasModal,articulo.notas)"></i>
+             </div>
+            </div> 
         </td>
       
     </tr>
@@ -382,6 +388,26 @@
                         </div>
                     </div>
                 </form>
+            </div>
+
+        </div>
+    </div>
+</ng-template>
+<!--end::Modal-->
+
+
+<!--begin::View  Modal-->
+<ng-template #notasModal let-c="close" let-d="dismiss">
+    <div class="modal-header">
+        <h4 class="modal-title">Notas</h4>
+        <button type="button" class="close" aria-label="Close" (click)="close()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <div class="m-portlet__head-caption">
+            <div class="m-list-settings">
+                <span >{{ ver_usuario }}</span>
             </div>
 
         </div>
