--- a/src/app/theme/pages/default/mi-casillero/facturacion-datatable/facturacion-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/facturacion-datatable/facturacion-datatable.component.html
@@ -26,7 +26,15 @@
             <span class="m-link" style="cursor: pointer" (click)="onFormasPago(articulo.id, formasPagoModal)">Ver Formas</span>
         </td>
         <td>
+            <div class="row">
+            <div class="col-3">
             <i class="fa fa-eye m--font-info" title="Ver" style="cursor: pointer;" (click)="onVer(articulo.id, articuloDetallesModal)"></i>
+            </div>
+            <div class="col-3" *ngIf="articulo.ver_usuario">
+                <i *ngIf="articulo.ver_usuario" class="fa fa-comments-o m--font-success" title="Notas" style="cursor: pointer" 
+                   (click)="onNotas(notasModal,articulo.ver_usuario)"></i>
+            </div>
+        </div>
         </td>
     </tr>
     </tbody>
@@ -122,4 +130,25 @@
     </div>
 
 </ng-template>
-<!--end::Modal-->  <!--begin::Modal-->
+<!--end::Modal--> 
+
+
+
+<!--begin::View  Modal-->
+<ng-template #notasModal let-c="close" let-d="dismiss">
+    <div class="modal-header">
+        <h4 class="modal-title">Notas</h4>
+        <button type="button" class="close" aria-label="Close" (click)="close()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <div class="m-portlet__head-caption">
+            <div class="m-list-settings">
+                <span >{{ ver_usuario }}</span>
+            </div>
+
+        </div>
+    </div>
+</ng-template>
+<!--end::Modal-->
