--- a/src/app/auth/login/login.component-2.html
+++ b/src/app/auth/login/login.component-2.html
@@ -1,9 +1,9 @@
-<div class="m-grid__item m-grid__item--fluid m-grid m-grid--hor m-login m-login--singin m-login--2 m-login-2--skin-2" id="m_login" style="background-color: #1e1111">
+<div class="m-grid__item m-grid__item--fluid m-grid m-grid--hor m-login m-login--singin m-login--2 m-login-2--skin-2" id="m_login">
 	<div class="m-grid__item m-grid__item--fluid	m-login__wrapper">
 		<div class="m-login__container">
 			<div class="m-login__logo">
 				<a href="#">
-					<img src="./assets/img/logo/logo_login.png" style="width: 200px; height: 200px; object-fit: contain">
+					<img src="./assets/img/logo/logo_fondo_claro.png" style="width: 200px; height: 200px; object-fit: contain">
 				</a>
 			</div>
 			<div class="m-stack__item m-stack__item--center">
@@ -33,7 +33,7 @@
 					</div>
 					<div class="row m-login__form-sub">
 						<div class="col m--align-left">
-							<label class="m-checkbox m-checkbox--focus" style="color: #b5b6b5">
+							<label class="m-checkbox m-checkbox--focus" style="color: #e753a1">
 								<input type="checkbox" name="remember" [(ngModel)]="model.remember" #remember="ngModel">
 								Recordarme
 								<span></span>
