--- a/src/app/auth/login/login.component-2.html
+++ b/src/app/auth/login/login.component-2.html
@@ -33,7 +33,7 @@
 					</div>
 					<div class="row m-login__form-sub">
 						<div class="col m--align-left">
-							<label class="m-checkbox m-checkbox--focus" style="color: #e753a1">
+							<label class="m-checkbox m-checkbox--focus" style="color: #365ba2">
 								<input type="checkbox" name="remember" [(ngModel)]="model.remember" #remember="ngModel">
 								Recordarme
 								<span></span>
