--- a/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
@@ -48,7 +48,7 @@
             </a>              
         </td>
         <td>
-            {{articulo.fecha_embarque | amTz:"America/New_York":true | date: "dd/MM/y"}}
+            {{articulo.fecha_embarque }}
         </td>
         <td>
             {{articulo.trackbox}}
