--- a/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
@@ -39,7 +39,7 @@
             <span *ngIf="articulo.retiro">Revisión</span>
         </td>
         <td>
-            {{articulo.fecha_bodega | amTz:"America/New_York":true | date: "dd/MM/y"}}
+            {{articulo.fecha_bodega }}
         </td>
         <td>
             {{articulo.trackbox}}
