--- a/src/app/theme/pages/default/tracks/track-formulario/track-formulario.component.html
+++ b/src/app/theme/pages/default/tracks/track-formulario/track-formulario.component.html
@@ -41,7 +41,7 @@
             </label>
             <div class="input-group col-lg-3">
                 <input class="form-control" placeholder="yyyy-mm-dd"
-                       name="fecha_posible" #fecha_posible="ngModel" ngModel
+                       name="fechaPosible" #fechaPosible="ngModel" ngModel
                        ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()">
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary" style="color: #575962; background-color: white"
