--- a/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
@@ -184,7 +184,7 @@
                             </label>
                             <div class="input-group col-lg-3">
                                 <input class="form-control" placeholder="yyyy-mm-dd"
-                                    name="fecha_expiracion" #fecha_expiracion="ngModel" [(ngModel)]="articulodv.fecha_expiracion_d_v"
+                                    name="fecha_expiracion" #fecha_expiracion="ngModel" [(ngModel)]="fecha_expiracion_d_v"
                                     ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()" required [maxDate]="fechaMaximoDV">
                                 <div class="input-group-append">
                                     <button class="btn btn-outline-secondary" 
