--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -1042,9 +1042,9 @@
                             </label>
                             <div class="col-lg-9">
                                 <select #domicilio_retiro="ngModel"  [(ngModel)]="entrega.domicilio" name="domicilio_retiro" class="form-control m-input" (change)="domicilioValue(domicilio_retiro.value)">
-                                    <option value= "1">DOMICILIO</option>
+                                    <option value= "1">DOMICILIO TRAMACO</option>
                                     <option value= "0">RETIRO PUNTO TRAMACO</option>
-                                    <option value= "2">RETIRO MATRIZ</option>
+                                    <option value= "2">MATRIZ GYE</option>
                                 </select>
                             </div>
                            
