--- a/src/app/theme/pages/default/extras/extras-datatable/extras-datatable.component.html
+++ b/src/app/theme/pages/default/extras/extras-datatable/extras-datatable.component.html
@@ -77,6 +77,9 @@
               (click)="documentoInput.click()"
             ></i>
           </div>
+          <div class="col-md-4 col-sm-6">
+            <span class="col-lg-2 m-badge m-badge--wide m-badge--success" style="cursor: pointer; max-width: 100%;" (click)="verCuposExtra(extra, cuposModal)">Ver cupos</span>
+          </div>
         </div>
       </td>
     </tr>
@@ -237,3 +240,57 @@
   </div>
 </ng-template>
 <!--end::Modal-->
+
+<!--begin::Ver Cupos Modal-->
+<ng-template #cuposModal let-c="close" let-d="dismiss">
+  <div class="modal-header">
+      <h4 class="modal-title">Cupos {{extra.nombre}} {{extra.apellidos}}</h4>
+      <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+          <span aria-hidden="true">&times;</span>
+      </button>
+  </div>
+  <div class="modal-body">
+      <div class="m-list-settings" *ngFor="let cupo of extra.cupos">
+          <h4 class="m--align-center" *ngIf="cupo.arancel.status && cupo.arancel.descripcion=='4X4'">Arancel: {{cupo.arancel.descripcion}}</h4>
+          <div class="m-list-settings__group" *ngIf="cupo.arancel.status && cupo.arancel.descripcion=='4X4'">
+              <div class="m-list-settings__item">
+                                      <span class="m-list-settings__item-label">
+                                          Cupo
+                                      </span>
+                  <span class="m-list-settings__item-control">
+                                          {{cupo.cupo}}
+                                      </span>
+              </div>
+              <div class="m-list-settings__item">
+                                      <span class="m-list-settings__item-label">
+                                          Valor
+                                      </span>
+                  <span class="m-list-settings__item-control">
+                                          {{cupo.valor}}
+                                      </span>
+              </div>
+          </div>
+      </div>
+      <div class="m-list-settings" *ngFor="let cupo of extra.cupos">
+          <h4 class="m--align-center" *ngIf="cupo.arancel.status && cupo.arancel.descripcion !='4X4'">Arancel: {{cupo.arancel.descripcion}}</h4>
+          <div class="m-list-settings__group" *ngIf="cupo.arancel.status && cupo.arancel.descripcion !='4X4'">
+              <div class="m-list-settings__item">
+                                      <span class="m-list-settings__item-label">
+                                          Cupo
+                                      </span>
+                  <span class="m-list-settings__item-control">
+                                          {{cupo.cupo}}
+                                      </span>
+              </div>
+              <div class="m-list-settings__item">
+                                      <span class="m-list-settings__item-label">
+                                          Valor
+                                      </span>
+                  <span class="m-list-settings__item-control">
+                                          {{cupo.valor}}
+                                      </span>
+              </div>
+          </div>
+      </div>
+  </div>
+</ng-template>
