--- a/src/app/theme/pages/default/perfil/perfil-lista/perfil-lista.component.html
+++ b/src/app/theme/pages/default/perfil/perfil-lista/perfil-lista.component.html
@@ -236,8 +236,29 @@
   </div>
   <div class="modal-body">
     <div class="m-list-settings" *ngFor="let cupo of extra.cupos">
-      <h4 class="m--align-center">Arancel: {{ cupo.arancel.descripcion }}</h4>
-      <div class="m-list-settings__group">
+      <h4 class="m--align-center" *ngIf="cupo.arancel.status && cupo.arancel.descripcion=='4X4'">Arancel: {{ cupo.arancel.descripcion }}</h4>
+      <div class="m-list-settings__group" *ngIf="cupo.arancel.status && cupo.arancel.descripcion=='4X4'">
+        <div class="m-list-settings__item">
+          <span class="m-list-settings__item-label">
+            Cupo
+          </span>
+          <span class="m-list-settings__item-control">
+            {{ cupo.cupo }}
+          </span>
+        </div>
+        <div class="m-list-settings__item">
+          <span class="m-list-settings__item-label">
+            Valor
+          </span>
+          <span class="m-list-settings__item-control">
+            {{ cupo.valor }}
+          </span>
+        </div>
+      </div>
+    </div>
+    <div class="m-list-settings" *ngFor="let cupo of extra.cupos">
+      <h4 class="m--align-center" *ngIf="cupo.arancel.status && cupo.arancel.descripcion !='4X4'">Arancel: {{ cupo.arancel.descripcion }}</h4>
+      <div class="m-list-settings__group" *ngIf="cupo.arancel.status && cupo.arancel.descripcion !='4X4'">
         <div class="m-list-settings__item">
           <span class="m-list-settings__item-label">
             Cupo
