--- a/src/app/theme/pages/default/perfil/perfil-lista/perfil-lista.component.html
+++ b/src/app/theme/pages/default/perfil/perfil-lista/perfil-lista.component.html
@@ -240,7 +240,7 @@
       <div class="m-list-settings__group" *ngIf="cupo.arancel.status && cupo.arancel.descripcion=='4X4'">
         <div class="m-list-settings__item">
           <span class="m-list-settings__item-label">
-            Cupo
+            Cupo Trámite
           </span>
           <span class="m-list-settings__item-control">
             {{ cupo.cupo }}
@@ -248,7 +248,7 @@
         </div>
         <div class="m-list-settings__item">
           <span class="m-list-settings__item-label">
-            Valor
+           Cupo Valor
           </span>
           <span class="m-list-settings__item-control">
             {{ cupo.valor }}
@@ -261,7 +261,7 @@
       <div class="m-list-settings__group" *ngIf="cupo.arancel.status && cupo.arancel.descripcion !='4X4'">
         <div class="m-list-settings__item">
           <span class="m-list-settings__item-label">
-            Cupo
+            Cupo Trámite
           </span>
           <span class="m-list-settings__item-control">
             {{ cupo.cupo }}
@@ -269,7 +269,7 @@
         </div>
         <div class="m-list-settings__item">
           <span class="m-list-settings__item-label">
-            Valor
+           Cupo Valor
           </span>
           <span class="m-list-settings__item-control">
             {{ cupo.valor }}
