--- a/src/app/theme/pages/default/extras/extras-datatable/extras-datatable.component.html
+++ b/src/app/theme/pages/default/extras/extras-datatable/extras-datatable.component.html
@@ -255,7 +255,7 @@
           <div class="m-list-settings__group" *ngIf="cupo.arancel.status && cupo.arancel.descripcion=='4X4'">
               <div class="m-list-settings__item">
                                       <span class="m-list-settings__item-label">
-                                          Cupo
+                                          Cupo Trámite
                                       </span>
                   <span class="m-list-settings__item-control">
                                           {{cupo.cupo}}
@@ -263,7 +263,7 @@
               </div>
               <div class="m-list-settings__item">
                                       <span class="m-list-settings__item-label">
-                                          Valor
+                                          Cupo Valor
                                       </span>
                   <span class="m-list-settings__item-control">
                                           {{cupo.valor}}
@@ -276,7 +276,7 @@
           <div class="m-list-settings__group" *ngIf="cupo.arancel.status && cupo.arancel.descripcion !='4X4'">
               <div class="m-list-settings__item">
                                       <span class="m-list-settings__item-label">
-                                          Cupo
+                                          Cupo Trámite
                                       </span>
                   <span class="m-list-settings__item-control">
                                           {{cupo.cupo}}
@@ -284,7 +284,7 @@
               </div>
               <div class="m-list-settings__item">
                                       <span class="m-list-settings__item-label">
-                                          Valor
+                                         Cupo Valor
                                       </span>
                   <span class="m-list-settings__item-control">
                                           {{cupo.valor}}
