--- a/src/app/theme/pages/default/contacto/contacto.component.html
+++ b/src/app/theme/pages/default/contacto/contacto.component.html
@@ -15,7 +15,7 @@
             <p>
                 Si no encuentras la respuesta a lo que buscas, no dudes de contactarnos.<br/><br/>
 
-                1- <a href="https://api.whatsapp.com/send?phone=+593980045674&text=&source=&data=" class="m-nav__link" target="_blanck" style="color:#1e1111 !important; text-decoration:none !important;">WHATSAPP</a> <br/><br/>
+                1- <a href=" https://wa.me/+593980045674" class="m-nav__link" target="_blanck" style="color:#1e1111 !important; text-decoration:none !important;">WHATSAPP</a> <br/><br/>
                 
                 2- MENSAJE
             </p>
