--- a/src/app/auth/login/login.component-2.html
+++ b/src/app/auth/login/login.component-2.html
@@ -66,6 +66,8 @@
 					</h3>
 					<div class="m-login__desc">
 						Introduzca su correo para resetear su contraseña:
+						<br/>
+						(Debe borrar y volver a escribir su email)
 					</div>
 				</div>
 				<form (ngSubmit)="forgotPass(correo.value)" #f="ngForm" class="m-login__form m-form" action="">
