--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -1521,7 +1521,7 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="form-group m-form__group row">
+                        <div class="form-group m-form__group row" *ngIf="retiro.servicio_id == 1">
                                 <label class="col-lg-3 col-form-label">
                                     Fecha del Servicio*:
                                 </label>
