--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -1406,7 +1406,9 @@
                              <span class="m-badge m-badge--danger m-badge--wide" *ngIf="articulo.factura == 0">No</span>
                             </span>
                         </td> -->
-                        <td>{{ articulo.descripcion }}</td>
+                        <td>{{ articulo.descripcion }}
+							<span *ngIf="articulo.extra">({{articulo.extra.nombre}} {{articulo.extra.apellidos}})</span>
+						</td>
                         <td>
                             {{ articulo.estado }}
                         </td> 
